--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,34 @@
   <link href="./output.css" rel="stylesheet">
 </head>
 <body>
-    <nav header class="header">
-        <label>Usuário Github</label>
-        <input inpt type="text">
-        <button btn>Adicionar</button>
-    </nav>
+    <div class="corpo">
+        <div header class="header">
+            <label>Usuário Github</label>
+            <input inpt type="text" placeholder="Insira seu nome">
+            <button btn>Adicionar</button>
+        </div>
 
-    <div class="card">
-        <nav class="cabecalho"></nav>
+        <main class="card">
+            <article>
+                <div class="head">
+                    <img class="landscape" style="border-radius: 10px; height: 25vh;" width="600" src="landscape.jpeg" alt="background">
+                    <img class="pfp" style="border-radius: 100%;" width="250" src="pfp.jpg" alt="profile picture">
+                </div>
+                <p name class="name">João da Silva</p>
+                <span login class="login">@joaozinho</span>
+            </article>
+
+            <nav>
+                <p>REPOSITÓRIOS</p>
+
+                <section>
+                    <strong nameR class="nameR">blog-pessoal</strong>
+                    <p description class="description">Crie o seu blog pessoal utilizando HTML e CSS</p>
+                    <span language class="language"><strong>#html</strong></span>
+                </section>
+
+            </nav>
+        </main>
     </div>
 </body>
 </html>
