--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,14 @@
   <link href="./output.css" rel="stylesheet">
 </head>
 <body>
-    <div class="corpo">
-        <div header class="header">
+    <div class="px-10 w-full h-full">
+        <div header class="flex items-center gap-15 my-20 h-14">
             <label>Usuário Github</label>
             <input inpt type="text" placeholder="Insira seu nome">
             <button btn>Adicionar</button>
         </div>
 
-        <main class="card">
+        <main class="flex flex-col rounded-10 w-8/25 h-">
             <article>
                 <div class="head">
                     <img class="landscape" style="border-radius: 10px; height: 25vh;" width="600" src="landscape.jpeg" alt="background">
