--- a/src/index.html
+++ b/src/index.html
@@ -5,31 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./output.css" rel="stylesheet">
 </head>
-<body>
-    <div class="px-10 w-full h-full">
-        <div header class="flex items-center gap-15 my-20 h-14">
+<body class="truncate">
+    <div class="w-full h-full p-10">
+        <div header class="">
             <label>Usuário Github</label>
-            <input inpt type="text" placeholder="Insira seu nome">
-            <button btn>Adicionar</button>
+            <input class="mx-4 p-2" inpt type="text" placeholder="Insira seu nome">
+            <button class="text-white bg-violet-900 rounded p-2" btn>Adicionar</button>
         </div>
 
-        <main class="flex flex-col rounded-10 w-8/25 h-">
-            <article>
+        <main class="w-1/4 h-full py-10 border-b-2 rounded">
+            <header>
                 <div class="head">
-                    <img class="landscape" style="border-radius: 10px; height: 25vh;" width="600" src="landscape.jpeg" alt="background">
-                    <img class="pfp" style="border-radius: 100%;" width="250" src="pfp.jpg" alt="profile picture">
+                    <img class="rounded" width="450" src="land.jpg" alt="background">
                 </div>
-                <p name class="name">João da Silva</p>
-                <span login class="login">@joaozinho</span>
-            </article>
+
+                <article class="flex flex-wrap justify-center text-center">
+                    <img class="rounded-full absolute -mt-24 border-8 border-white" width="150" src="pfp.jpg" alt="profile picture">
+                    <div class="py-14 h-18">
+                        <p class="w-full" name class="name">João da Silva</p>
+                        <span class="w-full" login class="login">@joaozinho</span>
+                    </div>
+                </article>
+            </header>
 
             <nav>
                 <p>REPOSITÓRIOS</p>
 
-                <section>
+                <section class="bg-zinc-200 px-5 rounded" >
                     <strong nameR class="nameR">blog-pessoal</strong>
                     <p description class="description">Crie o seu blog pessoal utilizando HTML e CSS</p>
-                    <span language class="language"><strong>#html</strong></span>
+                    <span language class="bg-zinc-600 rounded p-1"><strong>#html</strong></span>
                 </section>
 
             </nav>
