--- a/src/index.html
+++ b/src/index.html
@@ -7,21 +7,21 @@
 </head>
 <body class="truncate">
     <div class="w-full h-full p-10">
-        <div header class="">
+        <div header>
             <label>Usuário Github</label>
-            <input class="mx-4 p-2" inpt type="text" placeholder="Insira seu nome">
+            <input class="mx-4 p-2 px-4" inpt type="text" placeholder="Insira seu nome">
             <button class="text-white bg-violet-900 rounded p-2" btn>Adicionar</button>
         </div>
 
-        <main class="w-1/4 h-full py-10 border-b-2 rounded">
+        <main class="w-1/4 h-1/2 py-10 border-b-2 rounded">
             <header>
                 <div class="head">
-                    <img class="rounded" width="450" src="land.jpg" alt="background">
+                    <img class="rounded h-68" width="450" src="land.jpg" alt="background">
                 </div>
 
                 <article class="flex flex-wrap justify-center text-center">
                     <img class="rounded-full absolute -mt-24 border-8 border-white" width="150" src="pfp.jpg" alt="profile picture">
-                    <div class="py-14 h-18">
+                    <div class="py-14 h-16">
                         <p class="w-full" name class="name">João da Silva</p>
                         <span class="w-full" login class="login">@joaozinho</span>
                     </div>
@@ -31,7 +31,7 @@
             <nav>
                 <p>REPOSITÓRIOS</p>
 
-                <section class="bg-zinc-200 px-5 rounded" >
+                <section class="bg-zinc-200 px-5 my-4 rounded" >
                     <strong nameR class="nameR">blog-pessoal</strong>
                     <p description class="description">Crie o seu blog pessoal utilizando HTML e CSS</p>
                     <span language class="bg-zinc-600 rounded p-1"><strong>#html</strong></span>
