--- a/src/index.html
+++ b/src/index.html
@@ -4,37 +4,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./output.css" rel="stylesheet">
+  <script src="script.js" defer></script>
 </head>
 <body class="truncate">
     <div class="w-full h-full p-10">
         <div header>
             <label>Usuário Github</label>
-            <input class="mx-4 p-2 px-4" inpt type="text" placeholder="Insira seu nome">
-            <button class="text-white bg-violet-900 rounded p-2" btn>Adicionar</button>
+            <input inpt class="mx-4 p-2 px-4" type="text" placeholder="Insira seu nome">
+            <button btn class="text-white bg-violet-900 rounded p-2" btn>Adicionar</button>
         </div>
 
-        <main class="w-1/4 h-1/2 py-10 border-b-2 rounded">
+        <main class="w-1/4 h-3/5 py-10 border-b-2 border-slate-400 rounded">
             <header>
                 <div class="head">
-                    <img class="rounded h-68" width="450" src="land.jpg" alt="background">
+                    <img class="rounded h-64 w-full" src="landscape.jpeg" alt="background">
                 </div>
 
                 <article class="flex flex-wrap justify-center text-center">
-                    <img class="rounded-full absolute -mt-24 border-8 border-white" width="150" src="pfp.jpg" alt="profile picture">
+                    <img pfp class="rounded-full absolute -mt-24 border-8 border-white" width="150" src="pfp.jpg" alt="profile picture">
                     <div class="py-14 h-16">
-                        <p class="w-full" name class="name">João da Silva</p>
-                        <span class="w-full" login class="login">@joaozinho</span>
+                        <p name class="text-2xl">João da Silva</p>
+                        <span class="text-slate-600" login class="login">@joaozinho</span>
                     </div>
                 </article>
             </header>
 
-            <nav>
-                <p>REPOSITÓRIOS</p>
+            <nav class="py-10">
+                <p><strong>REPOSITÓRIOS</strong></p>
 
-                <section class="bg-zinc-200 px-5 my-4 rounded" >
+                <section class="px-5 my-4 h-24 rounded">
                     <strong nameR class="nameR">blog-pessoal</strong>
                     <p description class="description">Crie o seu blog pessoal utilizando HTML e CSS</p>
-                    <span language class="bg-zinc-600 rounded p-1"><strong>#html</strong></span>
+                    <span language class="bg-zinc-400 rounded px-4"><strong>#html</strong></span>
                 </section>
 
             </nav>
