--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,11 @@
   <link href="./output.css" rel="stylesheet">
   <script src="script.js" defer></script>
 </head>
-<body class="truncate">
+<body>
 
     <!-- npx tailwindcss -i ./src/input.css -o ./src/output.css --watch -->
-    <!-- MeErickss -->
 
-    <div corpo class="w-full h-full p-10">
+    <div class="w-full h-full p-10">
         <div header>
             <label>Usuário Github</label>
             <input inpt class="mx-4 p-2 px-4" type="text" placeholder="Insira seu nome">
@@ -24,25 +23,6 @@
                     <img class="rounded h-64 w-full" src="landscape.jpeg" alt="background">
                 </div>
 
-                <article class="flex flex-wrap justify-center text-center">
-                    <img pfp class="rounded-full absolute -mt-24 border-8 border-white" width="150" src="pfp.jpg" alt="profile picture">
-                    <div class="py-14 h-16">
-                        <p name class="text-2xl">João da Silva</p>
-                        <span login class="text-slate-600" class="login">@joaozinho</span>
-                    </div>
-                </article>
-            </header>
-
-            <nav class="py-10">
-                <p><strong>REPOSITÓRIOS</strong></p>
-
-                <section class="px-5 my-4 h-24 rounded">
-                    <strong nameR class="nameR">blog-pessoal</strong>
-                    <p description class="description">Crie o seu blog pessoal utilizando HTML e CSS</p>
-                    <span language class="bg-zinc-400 rounded px-4"><strong>#html</strong></span>
-                </section>
-
-            </nav>
         </main>
     </div>
 </body>
