--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-    <!-- npx tailwindcss -i ./src/input.css -o ./src/output.css --watch -->
+    <!-- 
+    npx tailwindcss -i ./src/input.css -o ./src/output.css --watch
+    -->
 
     <div class="w-full h-full p-10">
         <div header>
@@ -18,10 +20,8 @@
         </div>
 
         <main card id="card" class="w-1/4 h-3/5 py-10 border-b-2 border-slate-400 rounded hidden">
-            <header>
-                <div class="head">
-                    <img class="rounded h-64 w-full" src="landscape.jpeg" alt="background">
-                </div>
+
+            <div perfil></div>
 
         </main>
     </div>
