--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,7 @@
             <button btn class="text-white bg-violet-900 rounded p-2" btn>Adicionar</button>
         </div>
 
-        <main card id="card" class="w-1/4 h-3/5 py-10 border-b-2 border-slate-400 rounded hidden">
-
-            <div perfil></div>
-
-        </main>
+        <div cartoes class="h-full flex flex-wrap"></div>
     </div>
 </body>
 </html>
